deploy/minikube-ingress-hpa-list.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      k8s-app: jetty
    name: jetty
    namespace: default
  spec:
    selector:
      matchLabels:
        k8s-app: jetty
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        labels:
          k8s-app: jetty
        name: jetty
      spec:
        containers:
        - image: shawnyhw6n9/jetty:ap-startup
          name: jetty
          resources:
            limits:
              cpu: 750m
              memory: 640Mi
            requests:
              cpu: 500m
              memory: 256Mi
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    name: jetty
    namespace: default
  spec:
    maxReplicas: 2
    minReplicas: 1
    scaleTargetRef:
      apiVersion: extensions/v1beta1
      kind: Deployment
      name: jetty
    targetCPUUtilizationPercentage: 80
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: minikube-ingress
    namespace: default
  spec:
    rules:
    - host: minikube.example.com
      http:
        paths:
        - backend:
            serviceName: jetty
            servicePort: 8080
          path: /cap-web
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      k8s-app: jetty
    name: jetty
    namespace: default
  spec:
    ports:
    - nodePort: 31568
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      k8s-app: jetty
    sessionAffinity: ClientIP
    sessionAffinityConfig:
      clientIP:
        timeoutSeconds: 10800
    type: NodePort
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
